@@ -1,4 +1,5 @@
 source "https://rubygems.org"
+
 # Hello! This is where you manage which Jekyll version is used to run.
 # When you want to use a different version, change it below, save the
 # file and run `bundle install`. Run Jekyll with `bundle exec`, like so:
@@ -11,10 +12,13 @@ source "https://rubygems.org"
 gem "jekyll", "~> 4.3.2"
 
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
-# gem "minima", "~> 2.5"
+# gem "jekyll-newspaper"
+
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
+
 # gem "github-pages", group: :jekyll_plugins
+
 # If you have any plugins, put them here!
 # group :jekyll_plugins do
 #   gem "jekyll-feed", "~> 0.12"
