@@ -23,8 +23,8 @@ author: Yosi Leyid
 email: yosi@hasidic.dev
 description: >- # this means to ignore newlines until "baseurl:"
   Bootstrap Starter theme for jekyll by Yosi Leyid
-baseurl: "/jekyll-bootstrap-starter" # the subpath of your site, e.g. /blog
-url: "https://yosileyid.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: hasidicdevs
 github_username:  yosileyid
 
@@ -32,23 +32,3 @@ github_username:  yosileyid
 # theme: 
 # plugins:
 #   - jekyll-feed
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
