@@ -4,10 +4,6 @@
           Built by: <a href="https://github.com/yosileyid" target="_blank">@yosileyid</a>
         </p>
         
-        <p class="text-end">
-          <a href="{{ site.url }}{{ site.baseurl }}/">Home</a> | <a href="{{ site.url }}{{ site.baseurl }}/blog">Blog</a> | <a href="{{ site.url }}{{ site.baseurl }}/about">About</a>
-        </p>
-        
       </footer>
     </div>
 
