@@ -4,3 +4,7 @@
     <span class="fs-4">{{site.title}}</span>
   </a>
 </header>
+
+<p class="text-end">
+  <a href="{{ site.url }}{{ site.baseurl }}/">Home</a> / <a href="{{ site.url }}{{ site.baseurl }}/blog">Blog</a> / <a href="{{ site.url }}{{ site.baseurl }}/about">About</a>
+</p>
