@@ -1,8 +1,12 @@
 <div class="col-md-6">
   <h2>Get Started</h2>
-  <p>Here are a couple of ways to get started with the bootstrap-starter theme, I will be adding more using the example themes.</p>
+  <p>Check out some of my other themes for jekyll and use them if you like. Please consider sponsoring my work, or contributing if you like it.</p>
   <ul>
-    <li>Clone the Repo</li>
-    <li>Create a new repo using this one as the template</li>
+    <li>
+      <a href="https://github.com/yosileyid/jekyll-bootstrap-starter" target="_blank">jekyll-bootstrap-starter</a>
+    </li>
+    <li>
+      <a href="https://github.com/yosileyid/jekyll-newspaper" target="_blank">jekyll-newspaper</a>
+    </li>
   </ul>
 </div>
