@@ -13,3 +13,5 @@ layout: default
   </main>
 
   {% include bottom.html %}
+
+</div>
