@@ -7,7 +7,7 @@ title: Get started with Bootstrap
 
 Quickly and easily get started with Bootstrap's compiled, production-ready files with this barebones example featuring some basic HTML. I wanted to create a really simple theme for newbies to hack on that already comes with Bootstrap. I will add more to this as the downloads grow. If you would like to get in touch please consider joining the HDG developer chat on Discord and let's talk.
 
-
+You can install this theme as a template, or as a gem [jekyll-bs5](https://rubygems.org/gems/jekyll-bs5). You can also just clone it and run it locally or set it as the theme in your Gemfile and then `bundle install` which will pull down the latest version of this template. You can read all about the process in the README on the repository site. To get started with this template just edit the **_config.yml** and change the lines `baseurl` and `url` to suit your site and code away. I will include a post with the styleguide for bootstrap to make it easier.
 
 <a href="bootstrap-starter.zip" class="btn btn-primary btn-lg px-4">Download ZIP</a>
 
