@@ -1,0 +1,9 @@
+Gem::Specification.new do |s|
+  s.name          = "jekyll-bs5"
+  s.version       = "0.0.1-alpha"
+  s.authors       = ["Hasidic Development Group"]
+  s.license       = "MPL-2.0"
+  s.email         = ["yosileyid@gmail.com"]
+  s.homepage      = "https://github.com/yosileyid/jekyll-bootstrap-starter"
+  s.summary       = "Jekyll Bootstrap v5.03 Blog theme for the Jekyll framework in active development. Feel free to join our discord and contribute to it by raising bugs or providing code."
+  end
